# jobradar

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  SKILL.md  alembic.ini  config.example.yaml  config.yaml  docker-compose.yml  index.html  install.sh  jobradar-skill  pyproject.toml  report-4d0001b2.html  report-4d22cac5.html  report-500a1d97.html  report-539db1d2.html  report-6e831fe3.html  report-98fce242.html  report-a8cc9201.html  report-aef3d5dc.html  report-db51f19d.html  report-ede95d8e.html  setup.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTEXT.md  GUIDE_OPENCLAW_CLAUDE.md  IMPLEMENTATION_FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCT_ROADMAP.md  TESTING_GUIDE.md  sources_section_temp.txt
docs/superpowers/plans/: 2026-06-13-foundation-user-model.md  2026-06-14-expiry-freshness.md  2026-06-16-settings-llm-config.md  2026-06-16-source-reliability.md
docs/superpowers/specs/: 2026-06-13-foundation-user-model-design.md  2026-06-14-expiry-freshness-design.md  2026-06-16-cleanup-pass-design.md  2026-06-16-settings-llm-config-design.md  2026-06-16-source-reliability-design.md
mcp_servers/: README.md  stepstone_launcher.sh
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_user_settings.py
schemas/: candidate_profile.schema.json
src/: __init__.py  agent_installer.py  config.py  cv_parser.py  cv_reader.py  deduplicator.py  enricher.py  feedback.py  llm_client.py  llm_env_probe.py  main.py  models.py  query_builder.py  scorer.py  setup_wizard.py
src/jobradar/: __init__.py  config.py  pipeline.py  utils.py
src/jobradar/api/: deps.py  main.py  ws.py
src/jobradar/api/routers/: generate.py  jobs.py  outputs.py  pipeline.py  profile.py  settings.py  sources.py
src/jobradar/api/static/: index.html
src/jobradar/apply/: __init__.py  base.py  boss.py  engine.py  history.py  linkedin.py
src/jobradar/interfaces/: __init__.py  cli.py  skill.py
src/jobradar/llm/: __init__.py  catalog.py  client.py  connection.py  env_probe.py  resolver.py
src/jobradar/llm/prompts/: cover_letter.jinja2  cv_extract.jinja2  cv_optimize.jinja2  job_score.jinja2
src/jobradar/models/: __init__.py  candidate.py  job.py
src/jobradar/profile/: __init__.py  extractor.py  ingestor.py
src/jobradar/profile/readers/: __init__.py  base.py  file_reader.py
src/jobradar/report/: __init__.py  generator.py  publisher.py
src/jobradar/scoring/: __init__.py  freshness.py  hard_filter.py  scorer.py
src/jobradar/scoring/generator/: __init__.py  cover_letter.py  cv_optimizer.py
src/jobradar/sources/: __init__.py  base.py  detail.py  health.py  normalizer.py  query_builder.py  registry.py  report.py
src/jobradar/sources/adapters/: __init__.py  arbeitsagentur.py  bosszhipin.py  jobspy_adapter.py  lagou.py  stepstone.py  xing.py  zhilian.py
src/jobradar/storage/: __init__.py  db.py  models.py  repo.py
src/notifications/: __init__.py  email_notifier.py
src/sources/: __init__.py  apify_adapter.py  arbeitsagentur.py  base.py  bosszhipin.py  jobspy_adapter.py  lagou.py  linkedin_mcp.py  scrapegraph_mcp.py  stepstone_mcp.py  stepstone_scraper.py  xing_adapter.py  xing_scraper.py  zhilian.py
src/translators/: __init__.py  job_translator.py
src/web/: __init__.py  app.py
src/web/api/: __init__.py  jobs.py  status.py  upload.py
src/web/services/: __init__.py  job_processor.py  user_manager.py
tests/: conftest.py  test_arbeitsagentur.py  test_cleanup.py  test_cv_parser.py  test_cv_reader.py  test_expiry.py  test_foundation.py  test_jobspy.py  test_llm_env_probe.py  test_scorer.py  test_settings.py  test_smoke.py  test_source_quality.py  test_source_reliability.py
tests/fixtures/: sample_cv.md  sample_jobs.json  sample_profile.json
web_ui/: index.html
