[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-jobradar"
version = "0.3.2"
description = "AI-powered job search agent — scrape, score, apply. OpenClaw skill."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = [
    # Core
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    # Storage
    "sqlmodel>=0.0.18",
    # Job sources (EU, no Playwright required)
    "python-jobspy>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # CV readers
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "html2text>=2024.2.26",
    # Output & utilities
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.9.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.9.0",
    # Skill server (lightweight FastAPI, no dashboard deps)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
# CN job platforms — Boss直聘, Lagou, Zhilian (requires Playwright)
cn = ["playwright>=1.40.0"]
# Auto-apply engine — Boss直聘 greet, LinkedIn Easy Apply (requires Playwright)
apply = ["playwright>=1.40.0"]
# Web dashboard extras — WebSocket pipeline progress, async file serving
web = ["aiofiles>=23.2.0", "websockets>=12.0"]
# Development
dev = ["ruff>=0.4.0", "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]
# Everything (note: playwright installed once, shared by cn + apply)
all = ["openclaw-jobradar[cn,apply,web,dev]"]

[project.scripts]
jobradar = "jobradar.interfaces.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jobradar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
